kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiot-service
  labels:
    app: aiot
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: aiot
